--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+]]<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -57,7 +57,7 @@
                         I have hands-on experience with HTML, CSS, and JavaScript. My attention to detail and dedication to creating responsive, accessible, and visually stunning websites make me a valuable asset in delivering cutting-edge digital solutions.
 
                     </p>
-                    <a href="VaishnaviMane_cv.pdf" download>Download CV</a>
+                    <a href="VaishnaviMane1_cv.pdf" download>Download CV</a>
                 </div>
             </div>
         </div>
